--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
         </style>
         <link rel="stylesheet" href="https://js.arcgis.com/4.14/esri/themes/light/main.css">
     </head>
-    <body onload="getUserLocation();">
-        <nav class="navbar">
-            <div class="form-group">
-                <form class="form-inline">
-                    <input class="form-control" type="text" placeholder="temp placeholder" style="text-align:center">
-                </form>
+    <body onload="onLoad();">
+        <div class="row" style="height:100%; width:100%">
+            <div class="col-lg-8">
+                <div id="map-view"></div>
             </div>
-        </nav>
-        <div class="col-lg-8">
-            <div id="map-view"></div>
+            <div class="col-lg-4">
+                <div>
+                    <div></div>
+                    <div id="greeting" align="center"></div>
+                    <!--<form class="form-inline">
+                        <input class="form-control" type="text" placeholder="temp placeholder" style="text-align:center">
+                    </form>-->
+                </div>
+            </div>
         </div>
-        <div class="col-lg-4">
-
-        </div>
-        
         <footer>
         <!--JS files-->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
