Working API call with entire JSON output shown

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             <div class="col-lg-8">
                 <div id="map-view"></div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 scroll">
                 <div>
                     <div><img src="foodmood-logo.png" width=100%/></div>
                     <div id="greeting" align="center"></div>
                     <form>
-                        <input class="form-control" type="text" placeholder="Type and press enter to search" id="search" style="text-align:center" width=100%>
+                        <input class="form-control" type="text" placeholder="Type and press enter to search..." id="search" style="text-align:center" width=100%>
                     </form>
                 </div>
-                <div id="output"></div>
+                <div id="output" ></div>
             </div>
         </div>
         <footer>
