--- a/index.html
+++ b/index.html
@@ -8,23 +8,16 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <!--ArcGIS stylesheet.-->
         <link rel="stylesheet" href="https://js.arcgis.com/4.14/esri/themes/light/main.css">
-        <style>
-            html, body, #map-view {
-                padding: 0;
-                margin: 0;
-                height: 100%;
-                width: 100%;
-                max-height: 100%;
-            }
-        </style>
+        <!--My stylesheet.-->
         <link rel="stylesheet" href="styles.css">
+        <!--Defining the custom favicon.-->
         <link rel="shortcut icon" type="image/png" href="foodmood.png">
     </head>
 
     <body onload="onLoad();"> <!--Initializes and prompts user for location services.-->
         
         <!--Full-page row containing the entirety of the app.-->
-        <div class="row" style="height:100%; width:100%; max-height: 100%">
+        <div class="row">
             <!--Map takes up 2/3rds of the width.-->
             <div class="col-lg-8 left-panel">
                 <div id="map-view"></div>
@@ -37,7 +30,7 @@
                     <!--Modified by map.js.-->
                     <div id="greeting" align="center"></div>
                     <form>
-                        <input class="form-control" type="text" placeholder="Type and press enter to search..." id="search" style="text-align:center" width=100%>
+                        <input class="form-control" type="text" placeholder="Type and press enter to search (try: sushi, indian, takeout)" id="search" style="text-align:center" width=100% autocomplete=off>
                     </form>
                 </div>
                 <!--Search output goes here.-->
@@ -46,12 +39,14 @@
         </div>
 
         <!--JS files-->
+        <!--Imported JS from libraries.-->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="https://js.arcgis.com/4.14/"></script>
+        <!--My JS files.-->
         <script src="map.js"></script>
-        <!--<script src="search.js"></script>-->
+        <script src="search.js"></script>
     </body>
 
 </html>
